--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
+# Session info
 SECRET_KEY=ezioauditore
 SESSION_TIME=15
 JWT_AUD=go-todo.jwtgo
 JWT_ISS=jwtgo.io
+
+#Services ports and URLS
 NATS_URI=nats://127.0.0.1:4222
 AUTH_PORT=3001
 TODO_PORT=3002
+
+# MYSQL
+ROOT_PASSWORD=root
