--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/root as user/password credentials
 version: '3.5'
 
 services:
@@ -10,7 +9,7 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
 
   nats-server:
     image: nats:2.6.6
