Added a simple and basic nextjs app Moved a few configs to .env Added CORS

--- a/.env
+++ b/.env
@@ -10,4 +10,6 @@ AUTH_PORT=3001
 TODO_PORT=3002
 
 # MYSQL
-ROOT_PASSWORD=root
+MYSQL_HOST=localhost:3306
+MYSQL_ROOT_USERNAME=root
+MYSQL_ROOT_PASSWORD=root
