--- a/nats/Dockerfile
+++ b/nats/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.16-alpine as builder
 WORKDIR /app
-COPY . .
+COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
+COPY ./nats .
 RUN go build -o /nats-service
 
 FROM alpine:latest
