--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     container_name: mysql
+    volumes:
+      - ${DATA_DIR}:/var/lib/mysql
     networks:
       - backend
 
