--- a/next-todo-tailwind/package.json
+++ b/next-todo-tailwind/package.json
@@ -16,10 +16,15 @@
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
     "postcss": "^8.4.4",
     "react-query": "^3.34.6",
     "react-toastify": "^8.1.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.5.4"
+  },
+  "volta": {
+    "node": "14.17.0"
   }
 }
