--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ networks:
     driver: bridge
 
 services:
-  db:
+  mysql:
     image: mysql
+    build: ./mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     hostname: mysql
@@ -61,6 +62,7 @@ services:
       - mysql
     depends_on:
       - nats
+      - mysql
     environment:
       SECRET_KEY: "ezioauditore"
       SESSION_TIME: "15"
@@ -84,6 +86,7 @@ services:
       - mysql
     depends_on:
       - nats
+      - mysql
     environment:
       SECRET_KEY: "ezioauditore"
       SESSION_TIME: "15"
